--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Nav from '../components/Nav.astro';
+import Intro from '../components/Intro.astro';
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
+<Layout title="wuul's blog">
+	<div class="flex flex-col">
+		<Nav/>
+		<Intro/>
+	</div>
+	<!-- <main>
 		<svg
 			class="astro-a"
 			width="495"
@@ -60,7 +65,7 @@ import Card from '../components/Card.astro';
 				body="Come say hi to our amazing Discord community. ❤️"
 			/>
 		</ul>
-	</main>
+	</main> -->
 </Layout>
 
 <style>
@@ -69,7 +74,6 @@ import Card from '../components/Card.astro';
 		padding: 1rem;
 		width: 800px;
 		max-width: calc(100% - 2rem);
-		color: white;
 		font-size: 20px;
 		line-height: 1.6;
 	}
