alt tag to brand image

--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -10,7 +10,7 @@
             </div>
         </section>
         <section>
-            <img class="rounded-full h-3/4 " src="../../public/wuul0.png" />
+            <img class="rounded-full h-3/4 " src="../../public/wuul0.png" alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
         </section>
     </div>
     <!-- my brand image -->
