--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-
+import Nav from '../components/Nav.astro';
 interface Props {
 	title: string;
 }
@@ -18,6 +18,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+		<Nav/>
 		<slot />
 	</body>
 </html>
@@ -26,6 +27,6 @@ const { title } = Astro.props;
 		
 	}
 	html {
-		background: #eaeaea;
+		background: #FFFEF2;
 	}
 </style>
