accent color and title change

--- a/src/components/Branding.astro
+++ b/src/components/Branding.astro
@@ -19,7 +19,7 @@
         <div class="col-span-1"></div>
         <div class="col-span-3 text-center">
             <div class="flex flex-col justify-center h-full">
-                <h1 class="text-bold text-wuul-main text-4xl mb-4">Software Engineer</h1>
+                <h1 class="text-bold text-wuul-accent text-4xl mb-4">Builder</h1>
                 <p class="text-wuul-main text-2xl mb-4 ">
                     Adaptable, quick learner, eager to tackle hard problems and work with diverse tech stacks.
                 </p>
