incorporate the Layout and get the stubs setup

--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -1,3 +1,9 @@
-<h1>
-    Blogs
-</h1>
+---
+import Layout from "../layouts/Layout.astro"
+---
+
+<Layout>
+    <h1>
+        Blogs
+    </h1>
+</Layout>
