--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -1,3 +1,8 @@
-<h1>
-    Showcase
-</h1>
+---
+import Layout from "../layouts/Layout.astro"
+---
+<Layout>
+    <h1>
+        Showcase
+    </h1>
+</Layout>
