--- a/src/pages/vouches.astro
+++ b/src/pages/vouches.astro
@@ -1,3 +1,9 @@
-<h1>
-    Vouches
-</h1>
+---
+import Layout from "../layouts/Layout.astro";
+---
+
+<Layout>
+    <h1>
+        Vouches
+    </h1>
+</Layout>
