--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,5 @@
 ---
 import Nav from '../components/Nav.astro';
-interface Props {
-	title: string;
-}
-
-const { title } = Astro.props;
 ---
 
 <!doctype html>
@@ -15,7 +10,7 @@ const { title } = Astro.props;
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
+		<title>wuul.dev</title>
 	</head>
 	<body>
 		<Nav/>
@@ -23,10 +18,9 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
-	:root {
-		
-	}
 	html {
 		background: #FFFEF2;
+		margin: 0;
+		padding: 0;
 	}
 </style>
