content config && updates to all the previous compoennts. Use semantic html & responsiveness

--- a/src/components/Branding.astro
+++ b/src/components/Branding.astro
@@ -1,11 +1,11 @@
 
 <section>
     <!-- high level intro -->
-    <section class="wuul-gradiant grid grid-cols-3 justify-items-center items-center h-96">
+    <section class="wuul-gradiant grid grid-cols-3 justify-items-center items-center sm:h-60 lg:h-80">
         <section class="col-span-2 text-center">
             <div class="flex flex-col justify-center h-full">
-                <p class="text-4xl mb-1 font-main text-wuul-bg">Justin Montgomery </p>
-                <p class="subscript text-2xl mb-1 text-wuul-bg font-main italic">(wuul)</p>
+                <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Justin Montgomery </p>
+                <p class="subscript text-base lg:text-2xl mb-1 text-wuul-bg font-main italic">(wuul)</p>
             </div>
         </section>
         <!-- my brand image -->
@@ -15,25 +15,20 @@
     </section>
     
     <!-- more detailed blurb -->
-    <section class="grid grid-cols-5 justify-items-cneter items-center h-96">
+    <section class="grid grid-cols-5 justify-items-cneter items-center h-96 animate-once animate-fade-down animate-ease-in-out animate-duration-[2000ms]">
         <div class="col-span-1"></div>
         <div class="col-span-3 text-center">
             <div class="flex flex-col justify-center h-full">
-                <h1 class="text-bold text-wuul-accent text-4xl mb-4">Builder</h1>
-                <p class="text-wuul-main text-2xl mb-4 ">
+                <p class="text-base sm:text-2xl lg:text-4xl text-bold text-wuul-accent mb-4">Builder</p>
+                <p class="text-base sm:text-xl lg:text-2xl text-wuul-main mb-4 ">
                     Adaptable, quick learner, eager to tackle hard problems and work with diverse tech stacks.
                 </p>
-                <p class="text-wuul-main text-2xl">
+                <p class="text-base sm:text-xl lg:text-2xl text-wuul-main text-2xl">
                     My passion lies in Backend Development, Developer Tooling, Containerization, and shaping robust Infrastructure solutions. I bring a proven track record of driving innovation and delivering high-performance solutions.
                 </p>
             </div>
         </div>
         <div class="col-span-1"></div>
-    </section>
-
-    <!-- Skill section in a table -->
-    <section>
-
     </section>
 </section>
 
