--- a/src/components/Branding.astro
+++ b/src/components/Branding.astro
@@ -1,18 +1,14 @@
-
+---
+import PageTitleBlock from "./PageTitleBlock.astro"
+---
 <section>
     <!-- high level intro -->
-    <section class="wuul-gradiant grid grid-cols-3 justify-items-center items-center sm:h-60 lg:h-80">
-        <section class="col-span-2 text-center">
-            <div class="flex flex-col justify-center h-full">
-                <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Justin Montgomery </p>
-                <p class="subscript text-base lg:text-2xl mb-1 text-wuul-bg font-main italic">(wuul)</p>
-            </div>
-        </section>
+    <PageTitleBlock numberGridCols=3>
+        <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Justin Montgomery </p>
+        <p class="subscript text-base lg:text-2xl mb-1 text-wuul-bg font-main italic">(wuul)</p>
         <!-- my brand image -->
-        <section class="col-span-1 text-center">
-            <img class="rounded-full w-wuul-1/2 self-center" src="../../public/wuul0.png" alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
-        </section>
-    </section>
+        <img class="rounded-full w-wuul-1/2 self-center" src="../../public/wuul0.png" alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face." slot="title-image"/>
+    </PageTitleBlock>
     
     <!-- more detailed blurb -->
     <section class="grid grid-cols-5 justify-items-cneter items-center h-96 animate-once animate-fade-down animate-ease-in-out animate-duration-[2000ms]">
@@ -36,7 +32,5 @@
     .subscript{
         vertical-align: sub;
     }
-    .wuul-gradiant {
-        background: linear-gradient(to bottom, #74B881, #465B3D );
-    }
+    
 </style>
