storing changes as I roll back

--- a/src/components/Branding.astro
+++ b/src/components/Branding.astro
@@ -7,7 +7,7 @@ import PageTitleBlock from "./PageTitleBlock.astro"
         <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Justin Montgomery </p>
         <p class="subscript text-base lg:text-2xl mb-1 text-wuul-bg font-main italic">(wuul)</p>
         <!-- my brand image -->
-        <img class="rounded-full w-wuul-1/2 self-center" src="../../public/wuul0.png" alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face." slot="title-image"/>
+        <img class="rounded-full w-wuul-1/2 self-center" src="/wuul0.png" alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face." slot="title-image"/>
     </PageTitleBlock>
     
     <!-- more detailed blurb -->
