--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -7,7 +7,7 @@ interface Props {
 
 const { href, title, body } = Astro.props;
 ---
-
+<!--  maybe I can repurpose this card? -->
 <li class="link-card">
 	<a href={href}>
 		<h2>
