--- a/src/components/PageTitleBlock.astro
+++ b/src/components/PageTitleBlock.astro
@@ -3,19 +3,17 @@ const {
     numberGridCols
 } = Astro.props
 ---
-<section class=`wuul-gradiant grid grid-cols-${numberGridCols} justify-items-center items-center sm:h-60 lg:h-80`>
-    <section class="col-span-2 text-center">
-        <div class="flex flex-col justify-center h-full">
-            <slot/>
-        </div>
-    </section>
-    <section>
+<section class="wuul-gradient grid grid-cols-2 justify-items-center items-center h-60 lg:h-80">
+    <div class="text-center flex flex-col justify-center h-full">
+        <slot/>
+    </div>
+    <div class="flex justify-center items-center">
         <slot name="title-image"/>
-    </section>
+    </div>
 </section>
 
 <style>
-    .wuul-gradiant {
-        background: linear-gradient(to bottom, #74B881, #465B3D );
+    .wuul-gradient {
+        background: linear-gradient(to bottom, #74B881, #465B3D);
     }
 </style>
