--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -1,11 +1,13 @@
 ---
-import PageTitleBlock from "../components/PageTitleBlock.astro"
+import PageTitleBlock from "../components/PageTitleBlock.astro";
+import BrandImg from "../components/BrandImg.astro";
+// want to update the BlogLayout needs to be named something else
 import BlogLayout from "../layouts/Blog.astro"
 ---
 
 <BlogLayout>
     <PageTitleBlock numberGridCols=3>
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Development Journal</p>
-            <img class="rounded-full w-wuul-1/2 self-center" src="/wuul0.png" alt="" slot="title-image">
+            <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
     </PageTitleBlock>
 </BlogLayout>
