--- a/src/pages/showcase.astro
+++ b/src/pages/showcase.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro"
+import BaseLayout from "../layouts/BaseLayout.astro"
 ---
-<Layout>
+<BaseLayout>
     <h1>
         Showcase
     </h1>
-</Layout>
+</BaseLayout>
