--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 import MyBrand from '../components/Branding.astro';
 ---
 
-<Layout title="wuul.dev">
+<BaseLayout title="wuul.dev">
 	<div class="flex flex-col">
 		<MyBrand/>
 	</div>
-</Layout>
+</BaseLayout>
