--- a/src/pages/vouches.astro
+++ b/src/pages/vouches.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
-<Layout>
+<BaseLayout>
     <h1>
         Vouches
     </h1>
-</Layout>
+</BaseLayout>
