updating the components layout structure

--- a/src/components/branding/Branding.astro
+++ b/src/components/branding/Branding.astro
@@ -1,5 +1,5 @@
 ---
-import PageTitleBlock from "./PageTitleBlock.astro";
+import PageTitleBlock from "../PageTitleBlock.astro";
 import BrandImg from "./BrandImg.astro";
 ---
 <section>
