--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -1,6 +1,6 @@
 ---
 import PageTitleBlock from "../components/PageTitleBlock.astro";
-import BrandImg from "../components/BrandImg.astro";
+import BrandImg from "../components/branding/BrandImg.astro";
 import BaseLayout from "../layouts/BaseLayout.astro"
 ---
 <BaseLayout>
