--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
-import MyBrand from '../components/Branding.astro';
+import MyBrand from '../components/branding/Branding.astro';
 ---
 
 <BaseLayout title="wuul.dev">
