--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -1,12 +1,52 @@
 ---
-import PageTitleBlock from "../components/PageTitleBlock.astro";
+import { getCollection } from "astro:content";
 import BrandImg from "../components/branding/BrandImg.astro";
-import BaseLayout from "../layouts/BaseLayout.astro"
+import PageTitleBlock from "../components/PageTitleBlock.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
+import Card from "../components/Card.astro";
+
+const allPublishedBlogs = await getCollection("blogs", ({data}) => {
+    return data.isDraft !== true
+});
+
+allPublishedBlogs.sort((a,b) => {
+    return new Date(b.data.date).getTime() - new Date(a.data.date).getTime();
+});
+
+const publishedCategories = []
+for(const apb of allPublishedBlogs) {
+    publishedCategories.push(apb.data.category)
+}
+
 ---
 <BaseLayout>
     <PageTitleBlock>
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Development Journal</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
     </PageTitleBlock>
+    <!-- grid column block let the filters be in the last section -->
+    <section class="grid grid-cols-6">
+        <!-- have the blog posts in chronological order -->
+        <section class="col-span-5 grid grid-cols-3 gap-4">
+            {
+                allPublishedBlogs.map((blogs) => ( 
+                    <Card 
+                      title={blogs.data.title}
+                      slug={blogs.slug}
+                      tldr={blogs.data.tldr}
+                    />
+                ))
+            }
+        </section>
+        <section class="col-span-1">
+            <li class="flex flex-col" >
+                {
+                    publishedCategories.map(categories => (
+                        <ul>{categories}</ul>
+                    ))
+                }
+            </li>
+        </section>
+    </section>
     <!--  Blogs component that does all the collection fetching -->
 </BaseLayout>
