remove width util class and let the page handle it

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -16,7 +16,7 @@ const {
 	seoKeywords, slug, img } = Astro.props;
 ---
 <!--  maybe I can repurpose this card? -->
-<div class="link-card w-30">
+<div class="link-card">
 	<a href={`/blogs/${slug}`}>
 		<h2>
 			{title}
