have the bones of the responsive strucutre that I want so far for my Blog post page

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -20,6 +20,7 @@ import Nav from "../components/Nav.astro";
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
         </PageTitleBlock>
         <!-- whatever the tld is -->
+		<p>TLDR;</p>
         <p>{frontmatter.tldr}</p>
 		<slot />
 	</body>
