comitting work before restart

--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -3,7 +3,7 @@ import { getCollection } from "astro:content";
 import BrandImg from "../components/branding/BrandImg.astro";
 import PageTitleBlock from "../components/PageTitleBlock.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Card from "../components/Card.astro";
+import Card from "../components/BlogCard.astro";
 import SlideMenu from "../components/SideMenu.astro";
 import { bundlerModuleNameResolver } from "typescript";
 
