updating blog further; bg color matching sheep image; removing fall back fonts

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -27,7 +27,7 @@ import Nav from "../components/Nav.astro";
 </html>
 <style is:global>
 	html {
-		background: #FFFEF2;
+		background:#FDFEF8;
 		margin: 0;
 		padding: 0;
 	}
