--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -3,9 +3,11 @@ import { getCollection } from "astro:content";
 import BrandImg from "../components/branding/BrandImg.astro";
 import PageTitleBlock from "../components/PageTitleBlock.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import Card from "../components/BlogCard.astro";
-import SlideMenu from "../components/SideMenu.astro";
-import { bundlerModuleNameResolver } from "typescript";
+// blog specific components
+import BlogCard from "../components/blog/BlogCard.astro";
+import BlogHeader from "../components/blog/BlogHeader.astro";
+import BlogCardMetadata from "../components/blog/BlogCardMetadata.astro";
+import BlogTags from "../components/blog/BlogTags.astro";
 
 const allPublishedBlogs = await getCollection("blogs", ({data}) => {
     return data.isDraft !== true
@@ -15,9 +17,11 @@ allPublishedBlogs.sort((a,b) => {
     return new Date(b.data.date).getTime() - new Date(a.data.date).getTime();
 });
 
-const publishedCategories = [];
+const uniqueTags = new Set<string>();
 for(const apb of allPublishedBlogs) {
-    publishedCategories.push(apb.data.category);
+    for(const t of apb.data.tags) {
+        uniqueTags.add(t);
+    }
 }
 
 ---
@@ -26,37 +30,21 @@ for(const apb of allPublishedBlogs) {
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Development Journal</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
     </PageTitleBlock>
-    <!-- grid column block let the filters be in the last section -->
     <section class="grid grid-cols-6 mt-2">
-        <!-- have the blog posts in chronological order -->
-        <!-- restrict the size of the card. I want to get multiple cards in the same row -->
-        <section class="col-span-5 grid grid-cols-1 gap-2">
-            <!-- think ultimately we need another container item that is here and then we build the card things inside of that. -->
+        <section class="col-span-6 md:col-span-5 grid grid-cols-1 gap-2">
             {
-                allPublishedBlogs.map((blogs) => ( 
-                    // this is a place holder for the cardContainer element
-                    <div>
-                        <Card 
-                          title={blogs.data.title}
-                          slug={blogs.slug}
-                        />
-                    </div>
+                allPublishedBlogs.map((b) => ( 
+                    // I need the Date somewhere. 
+                    <BlogCard slug={b.slug}>
+                            <BlogHeader slot="blog-card-header" articleTitle={b.data.title}/>
+                            <BlogCardMetadata slot="blog-card-metadata" articleDescription={b.data.description} tags={b.data.tags}/>
+                    </BlogCard>
                 ))
             }
         </section>
-        <section class="hidden sm:col-span-1 sm:col-start-6 sm:flex flex-col items-center">
-            <h1>Categories</h1>
-            <ul>
-                {
-                    publishedCategories.map((c) => (
-                        <li class="mt-1">
-                            {c}
-                        </li>
-
-                    ))
-                }
-            </ul>
+        <section class="hidden sm:col-span-1 sm:col-start-6 sm:flex flex-col items-center text-base font-main text-wuul-accent">
+            <BlogTags tags={uniqueTags} />
         </section>
     </section>
-    <!--  Blogs component that does all the collection fetching -->
 </BaseLayout>
+
