--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -8,7 +8,7 @@ const {pathname} = Astro.url
 const isActive = href === pathname || href === pathname.slice(1);
 ---
 
-<a class=`link-text text-wuul-accent font-medium hover-underline active:text-wuul-gold ${isActive ? "active" : ""}` href={href}>
+<a class=`link-text text-base lg:text-lg text-wuul-purp font-medium hover-underline ${isActive ? "active" : ""}` href={href}>
     {txt}
 </a>
 
@@ -19,9 +19,5 @@ const isActive = href === pathname || href === pathname.slice(1);
     :hover.hover-underline {
         text-decoration: none;
         color: #8D6DAC;
-    }
-    .active {
-        text-decoration: underline;
-        text-decoration-color: #8D6DAC;
     }
 </style>
