updating styling for branding section

--- a/src/components/branding/Branding.astro
+++ b/src/components/branding/Branding.astro
@@ -16,7 +16,7 @@ import BrandImg from "./BrandImg.astro";
         <div class="col-span-1"></div>
         <div class="col-span-3 text-center">
             <div class="flex flex-col justify-center h-full">
-                <p class="text-base sm:text-2xl lg:text-4xl text-bold text-wuul-accent mb-4">Builder</p>
+                <p class="text-base sm:text-2xl lg:text-4xl text-bold text-wuul-purp mb-4">Builder</p>
                 <p class="text-base sm:text-xl lg:text-2xl text-wuul-main mb-4 ">
                     Adaptable, quick learner, eager to tackle hard problems and work with diverse tech stacks.
                 </p>
