--- a/src/components/blog/BlogTags.astro
+++ b/src/components/blog/BlogTags.astro
@@ -17,7 +17,7 @@ const tagsArray = Array.isArray(tags) ? tags : Array.from(tags);
             {
                 tagsArray.map((t) => (
                     <li
-                    class="mt-1 hover-underline border-solid border-2 border-wuul-accent rounded-lg p-2 text-wuul-bg bg-wuul-accent min-w-0 min-h-0"
+                    class="mt-1 hover-underline border-solid border-2 border-wuul-accent rounded-lg p-2 text-wuul-bg bg-wuul-accent min-w-0 min-h-0 font-sub"
                 >
                     {t}
                 </li>    
@@ -29,7 +29,7 @@ const tagsArray = Array.isArray(tags) ? tags : Array.from(tags);
             {
                 tagsArray.slice(0, 3).map((t) => (
                     <li
-                        class="mt-1 hover-underline border-solid border-2 border-wuul-accent rounded-lg p-2 text-wuul-bg bg-wuul-accent min-w-0 min-h-0"
+                        class="mt-1 hover-underline border-solid border-2 border-wuul-accent rounded-lg p-2 text-wuul-bg bg-wuul-accent min-w-0 min-h-0 font-sub"
                     >
                         {t}
                     </li>
@@ -38,7 +38,7 @@ const tagsArray = Array.isArray(tags) ? tags : Array.from(tags);
             {
                  tagsArray.length > 3 && (
                     <li
-                        class="mt-1 hover-underline border-solid border-2 border-wuul-accent rounded-lg p-2 text-wuul-bg bg-wuul-accent min-w-0 min-h-0"
+                        class="mt-1 hover-underline border-solid border-2 border-wuul-accent rounded-lg p-2 text-wuul-bg bg-wuul-accent min-w-0 min-h-0 font-sub"
                     >
                         {`${tagsArray.length - 3} more ...`}
                     </li>
