--- a/src/components/branding/Branding.astro
+++ b/src/components/branding/Branding.astro
@@ -5,22 +5,22 @@ import BrandImg from "./BrandImg.astro";
 <section>
     <!-- high level intro -->
     <PageTitleBlock numberGridCols=3>
-        <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Justin Montgomery </p>
+        <p class="text-xl lg:text-4xl mb-1 font-main text-wuul-bg sm:text-md">Justin Montgomery </p>
         <p class="subscript text-base lg:text-2xl mb-1 text-wuul-bg font-main italic">(wuul)</p>
         <!-- my brand image -->
         <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
     </PageTitleBlock>
     
     <!-- more detailed blurb -->
-    <section class="grid grid-cols-5 justify-items-cneter items-center h-96 animate-once animate-fade-down animate-ease-in-out animate-duration-[2000ms]">
+    <section class="grid grid-cols-5 justify-items-center items-center h-96 animate-once animate-fade-down animate-ease-in-out animate-duration-[2000ms]">
         <div class="col-span-1"></div>
         <div class="col-span-3 text-center">
             <div class="flex flex-col justify-center h-full">
-                <p class="text-base sm:text-2xl lg:text-4xl text-bold text-wuul-purp mb-4">Builder</p>
-                <p class="text-base sm:text-xl lg:text-2xl text-wuul-main mb-4 ">
+                <p class="text-2xl lg:text-4xl font-main text-bold text-wuul-purp mb-4">Builder</p>
+                <p class="text-base lg:text-2xl font-sub mb-4 ">
                     Adaptable, quick learner, eager to tackle hard problems and work with diverse tech stacks.
                 </p>
-                <p class="text-base sm:text-xl lg:text-2xl text-wuul-main text-2xl">
+                <p class="text-base lg:text-2xl font-sub text-2xl">
                     My passion lies in Backend Development, Developer Tooling, Containerization, and shaping robust Infrastructure solutions. I bring a proven track record of driving innovation and delivering high-performance solutions.
                 </p>
             </div>
