--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -30,8 +30,8 @@ for(const apb of allPublishedBlogs) {
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Development Journal</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
     </PageTitleBlock>
-    <section class="grid grid-cols-6 mt-2">
-        <section class="col-span-6 md:col-span-5 grid grid-cols-1 md:grid-cols-2 gap-2">
+    <section class="grid grid-cols-6 mt-4 md:mt-12">
+        <section class="col-span-6 md:col-span-5 grid grid-cols-1 md:grid-cols-2 gap-6">
             {
                 allPublishedBlogs.map((b) => ( 
                     // I need the Date somewhere. 
@@ -42,7 +42,7 @@ for(const apb of allPublishedBlogs) {
                 ))
             }
         </section>
-        <section class="hidden sm:col-span-1 sm:col-start-6 sm:flex flex-col items-center text-base font-main text-wuul-accent">
+        <section class="hidden lg:col-span-1 lg:col-start-6 lg:flex flex-col items-center text-base text-wuul-accent">
             <BlogTags tags={uniqueTags} shouldLoadAllTags={true} shouldLoadHeader={true} />
         </section>
     </section>
