--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,8 +1,12 @@
 ---
+import type { NavMetadata } from "../types";
 import Link from "./Link.astro";
-const pages = [{to: "/", txt: "About"}, {to: "blogs", txt: "Blogs"}, {to: "showcase", txt: "Showcase"}, {to: "vouches", "txt": "Vouches"}];
+interface Props {
+    routes: NavMetadata[]
+}
+const { routes } = Astro.props;
 ---
 
 <div class="flex justify-around h-[4vh] items-center font-main">
-    {pages.map((page) => <Link href={page.to} txt={page.txt}/>)}
+    {routes.map((r) => <Link href={r.to} txt={r.txt}/>)}
 </div>
