--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,8 +1,9 @@
 ---
-const { frontmatter } = Astro.props
 import PageTitleBlock from "../components/PageTitleBlock.astro"
 import BrandImg from "../components/branding/BrandImg.astro"
 import Nav from "../components/Nav.astro";
+import { subRoutes } from "../routes/routes.metadata";
+const { frontmatter } = Astro.props;
 ---
 <!doctype html>
 <html lang="en">
@@ -15,11 +16,12 @@ import Nav from "../components/Nav.astro";
 		<title>wuul.dev</title>
 	</head>
 	<body>
+		<Nav routes={subRoutes}/>
         <PageTitleBlock>
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">{frontmatter.title}</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
         </PageTitleBlock>
-        <!-- whatever the tld is -->
+        <!-- lets gussy this up now -->
 		<p>TLDR;</p>
         <p>{frontmatter.tldr}</p>
 		<slot />
