adding the filter mechanism for the blog posts and their associated tags

--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -25,7 +25,7 @@ for(const apb of allPublishedBlogs) {
 }
 
 ---
-<BaseLayout>
+<BaseLayout levels="../">
     <PageTitleBlock>
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">Development Journal</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
