--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
 import MyBrand from '../components/branding/Branding.astro';
 ---
 
-<BaseLayout title="wuul.dev">
+<BaseLayout levels="/">
 	<div class="flex flex-col">
 		<MyBrand/>
 	</div>
