--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,10 +1,15 @@
 ---
+import moment from "moment";
 import PageTitleBlock from "../components/PageTitleBlock.astro"
 import BrandImg from "../components/branding/BrandImg.astro"
 import Nav from "../components/Nav.astro";
+import Prose from "../components/blog/Prose.astro";
+import BlogTags from "../components/blog/BlogTags.astro";
 
 import { subRoutes } from "../routes/routes.metadata";
+import TableOfContents from "../components/blog/toc/TableOfContents.astro";
 const { frontmatter, headings } = Astro.props;
+const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 ---
 <!doctype html>
 <html lang="en">
@@ -12,7 +17,10 @@ const { frontmatter, headings } = Astro.props;
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
 		<meta name="generator" content={Astro.generator} />
 		<title>wuul.dev</title>
 	</head>
@@ -22,20 +30,37 @@ const { frontmatter, headings } = Astro.props;
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">{frontmatter.title}</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
         </PageTitleBlock>
-		<div>
-			<div class="grid grid-col-4">
+		<!-- this should all go into a component in my /blog directory probably at the end of the day.. -->
+		<section class="grid grid-cols-1 mx-2 md:grid-cols-4">
+			<div class="hidden md:block col-span-1"></div>
+			<div class="col-span-1 md:col-span-2">
+				<div class="flex flex-col">
+					<div class="mb-10 font-main font-medium text-wuul-main">
+						<!-- Date of the article when I published it-->
+						<section class="border-solid border-b-2 border-wuul-accent lg:w-3/4">
+							<div>
+								<p class="my-5 mb-10 text-medium">
+									{formatedDate}
+								</p>
+								<p class="text-lg lg:text-2xl mb-5 text-wuul-purp">TL;DR</p>
+								<p>
+									{frontmatter.tldr}
+								</p>
+							</div>
+						</section>
+					</div>
+					<article>
+						<Prose>
+							<slot />
+						</Prose>
+					</article>
+				</div>
 			</div>
-		</div>
-		<!-- 4 columns? -->
-		<!-- 1 column on the left for space. -->
-		<!-- 2 columns flex stacked to hold the slot   -->
-		<!-- 1 column flex-col that will eventually hold the table of contens -->
-
-        <!-- lets gussy this up now -->
-		<!-- <p>TLDR;</p>
-        <p>{frontmatter.tldr}</p> -->
-		<!-- these are the actual props from the content  -->
-		<slot />
+			<!-- this will render the heading table of contents. -->
+			<div class="hidden md:block mt-5 col-span-1">
+				<TableOfContents headings={headings}/>
+			</div>
+		</section>
 	</body>
 </html>
 <style is:global>
