--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -42,7 +42,7 @@ const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 								<p class="my-5 mb-10 text-medium">
 									{formatedDate}
 								</p>
-								<p class="text-lg lg:text-2xl mb-5 text-wuul-purp">TL;DR</p>
+								<p class="text-2xl lg:text-3xl mb-5 text-wuul-purp">TL;DR</p>
 								<p>
 									{frontmatter.tldr}
 								</p>
@@ -57,7 +57,7 @@ const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 				</div>
 			</div>
 			<!-- this will render the heading table of contents. -->
-			<div class="hidden md:block mt-5 col-span-1">
+			<div class="hidden lg:block mt-5 col-span-1">
 				<TableOfContents headings={headings}/>
 			</div>
 		</section>
