--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,6 +1,6 @@
 ---
 import Nav from '../components/Nav.astro';
-import { routes } from "../routes/routes.metadata";
+import { blogRoutes } from "../routes/routes.metadata";
 ---
 
 <!doctype html>
@@ -17,7 +17,7 @@ import { routes } from "../routes/routes.metadata";
 		<title>wuul.dev</title>
 	</head>
 	<body>
-		<Nav routes={routes}/>
+		<Nav routes={blogRoutes.base}/>
 		<slot />
 	</body>
 </html>
