--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -1,9 +1,9 @@
 ---
 import moment from "moment";
 import PageTitleBlock from "../components/PageTitleBlock.astro"
-import BrandImg from "../components/branding/BrandImg.astro"
+import BrandImg from "../components/branding/BrandImg.astro";
+import BlogContent from "../components/blog/BlogContent.astro";
 import Nav from "../components/Nav.astro";
-import Prose from "../components/blog/Prose.astro";
 
 import { blogRoutes } from "../routes/routes.metadata";
 import TableOfContents from "../components/blog/toc/TableOfContents.astro";
@@ -25,6 +25,7 @@ const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 	</head>
 	<body>
 		<Nav routes={blogRoutes.alterBaseRouteDepth("../..")}/>
+		<!-- try and break this up -->
         <PageTitleBlock>
             <p class="text-base lg:text-4xl sm:text-xl mb-1 font-main text-wuul-bg sm:text-md">{frontmatter.title}</p>
             <BrandImg slot="title-image" src="/wuul0.png", alt="White fluffy sheep holding a Raspberry Pi with a wise look on its face."/>
@@ -33,27 +34,7 @@ const formatedDate = moment(frontmatter.date).format("MMMM D, YYYY");
 		<section class="grid grid-cols-1 mx-2 md:grid-cols-5">
 			<div class="hidden md:block col-span-1"></div>
 			<div class="col-span-1 md:col-span-3">
-				<div class="flex flex-col">
-					<div class="mb-10 font-main font-medium text-wuul-main">
-						<!-- Date of the article when I published it-->
-						<section class="border-solid border-b-2 border-wuul-accent lg:w-3/4">
-							<div>
-								<p class="my-5 mb-10 text-medium">
-									{formatedDate}
-								</p>
-								<p class="text-2xl lg:text-3xl mb-5 text-wuul-purp">TL;DR</p>
-								<p>
-									{frontmatter.tldr}
-								</p>
-							</div>
-						</section>
-					</div>
-					<article>
-						<Prose>
-							<slot />
-						</Prose>
-					</article>
-				</div>
+				<BlogContent formatedDate={formatedDate} tldr={frontmatter.tldr}/>
 			</div>
 			<!-- this will render the heading table of contents. -->
 			<div class="hidden lg:block mt-5 col-span-1">
